Wrapping anchor in span to fix CSS issue in mobile mode.

--- a/app/assets/stylesheets/patterns/_task-list.scss
+++ b/app/assets/stylesheets/patterns/_task-list.scss
@@ -52,8 +52,9 @@
 }
 
 .app-task-list__task-name {
-  display: block;
-  float: left;
+  @include media(450px) {
+    float: left;
+  }
 }
 
 .app-task-list__task-completed {
@@ -76,4 +77,8 @@
     margin-top: 0;
     margin-bottom: 0;
   }
+}
+
+.app-task-link {
+  display: block;
 }
